# optimizers

./: .gitignore  CYTHON_ANALYSIS.md  LICENSE  LK_PERFORMANCE_REPORT.md  MANIFEST.in  PERFORMANCE_REPORT.md  PERF_PLAN.md  QD_PARETO_PLAN.md  README.md  aco.py  ga.py  local.py  opt_types.py  optimizer_base.py  optimizer_strategy.py  pso.py  pyproject.toml  sample.py  setup.py  solution_deck.py  test_optimizers  tqdm_joblib.py
.github/workflows/: pr.yml  publish.yml
samples/: base_clik.py  requirements.txt  truai_clik.py  tsp-demo.py  tsp-scale-demo.py
samples/cluster/: __init__.py  tsp.py
samples/remi/: __init__.py
samples/remi/src/: clik_functions.py  dynamics.py  integrate.py  kinematics.py  simulation.py  system.py  visualize.py
samples/remi/src/functions/: forward_dynamics.pkl  inverse_dynamics.pkl  lam.pkl  lam_dot.pkl
samples/scluster/: __init__.py  att532.txt  berlin52.txt  brd14051.txt  burma14.txt  d1291.txt  ivat_tsp.py  rl5915.txt  tri_data.py  tsp.py  ucidemo.py  usa13509.txt
src/: __init__.py  aco.py  ga.py  gd.py  local.py  opt_types.py  optimizer_base.py  optimizer_strategy.py  pso.py  solution_deck.py  variables.py
src/cluster/: __init__.py  fcm.py  heap.py  mergevat.py
src/fuzzy/: __init__.py  control.py  fuzzy_set.py  membership.py  operator.py
src/optimizers/: __init__.py  aco.py  checkpoint.py  ga.py  gd.py  local.py  optimizer_base.py  optimizer_strategy.py  pso.py  solution_deck.py  variables.py
src/optimizers/archive/: __init__.py  base.py  cvt.py  descriptor.py  metrics.py  variation.py
src/optimizers/combinatorial/: _tsp_cython.pyx  aco.py  aco_mst.py  base.py  compare.py  ga.py  mtsp.py  strategy.py  tsp.py
src/optimizers/continuous/: aco.py  base.py  block_aco.py  ga.py  gd.py  local.py  optimizer_strategy.py  pso.py  step.py  variables.py
src/optimizers/core/: __init__.py  base.py  parallel.py  random.py  tqdm_joblib.py  types.py  variables.py
src/optimizers/fuzzy/: base.py  fuzzy_set.py  membership.py  operator.py
src/optimizers/plot/: __init__.py
src/t2fuzzy/: __init__.py
tests/: __init__.py  benchmark_heap.py  benchmark_split_merge.py  city_data.txt  conftest.py  kruskal.py  test_checkpointing.py  test_cluster.py  test_combinatorics.py  test_constraints.py  test_distributions.py  test_fuzzy.py  test_map_elites.py  test_multi_output.py  test_optimizers.py  test_plot.py  test_qd_metrics.py  test_runtime_args.py  test_tsp_compare.py  test_tsp_cython.py
