[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimizers"
version = "0.2.0"
description = "A collection of optimization algorithms (GA, PSO, ACO, GD, etc.)"
authors = [{ name = "fundthmcalculus" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = ["optimization", "GA", "PSO", "ACO", "GD"]
dependencies = [
    "numpy>=1.21",
    "plotly>=6.0.0",
    "tqdm>=4.60",
    "joblib>=1.0",
    "contextlib2>=0.6.0",
    "kmodes>=0.12.2",
    "scikit-learn>=1.7.2",
    "scipy",
    "pandas>=2.0.0",
    "numba"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=24.0",
    "matplotlib>=3.10",
    "flake8",
    "Flake8-pyproject",
    "mypy",
    "optuna>=4.3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"] # <-- this changed

[project.scripts]
optimizers = "optimizers.__init__:main"

[tool.flake8]
max-line-length = 120
exclude = ".git,__pycache__,build,dist,.eggs,.tox,.venv,venv"
# E203 / W503 conflict with black's formatting; ignore per black's guidance.
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
# Third-party numeric/plotting libs (numba, kmodes, plotly, joblib, sklearn,
# scipy) ship no/partial stubs; don't fail on their missing type info.
ignore_missing_imports = true
warn_redundant_casts = true
# The AF/AI aliases are unions of dtype-parameterized numpy arrays, so ordinary
# array arithmetic trips these categories pervasively (false positives, not
# bugs). Silence them for now; the real-defect categories (attr-defined,
# return-value, name-defined, no-redef, call-arg, ...) stay enforced. Ratchet
# these off as the numeric annotations tighten.
disable_error_code = [
    "arg-type",
    "assignment",
    "index",
    "operator",
    "union-attr",
    "override",
    "list-item",
]
